# babelvox

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/babelvox/: __init__.py  __main__.py  cli.py  epub.py  longform.py  pipeline.py  prosody.py  server.py  speakers.py  ws_server.py
src/babelvox/data/speakers/: cindy.json  cindy.npy  lou.json  lou.npy  phil.json  phil.npy  steve.json  steve.npy
src/babelvox/static/: index.html
src/babelvox/text/: __init__.py  normalizer.py  onomatopoeia.py  punctuation.py  ssml.py
tests/: test_epub.py  test_longform.py  test_normalizer.py  test_onomatopoeia.py  test_prosody.py  test_punctuation.py  test_server.py  test_speakers.py  test_sse.py  test_ssml.py  test_ws_server.py
tools/: compare_precision.py  create_example_speakers.py  export_cp_kvcache.py  export_decoder.py  export_speaker_encoder.py  export_tokenizer_encoder.py  export_tts_lm.py  export_tts_lm_kvcache.py  export_weights.py  profile_cp_kvcache.py  profile_step.py  quantize_models.py
tools/reference_audio/: README.md
