[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "babelvox"
version = "0.1.0"
description = "Real-time text-to-speech on Intel NPU/CPU via OpenVINO"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "openvino>=2025.4",
  "numpy",
  "librosa",
  "soundfile",
  "scipy",
  "transformers",
]

[project.scripts]
babelvox = "babelvox.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["babelvox"]
