[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "babelvox"
version = "0.5.1"
description = "Real-time text-to-speech on Intel NPU/CPU via OpenVINO"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "openvino>=2025.4",
  "numpy>=2.0",
  "librosa>=0.11",
  "soundfile>=0.13",
  "scipy>=1.14",
  "transformers>=5.0",
  "huggingface_hub>=1.0",
]

[project.urls]
Repository = "https://github.com/Djwarf/babelvox"
Issues = "https://github.com/Djwarf/babelvox/issues"

[project.scripts]
babelvox = "babelvox.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["babelvox"]
